# Volterra

./: .env.example  .gitignore  Dockerfile  README.md  dump.ensayo.1175000.config  package-lock.json  package.json  pyproject.toml
bindings/python/: PyBindModule.cpp  pyproject.toml  setup.py
bindings/python/opendxa/: __init__.py
bindings/python/opendxa/digrat/: __init__.py  dislocation_lineage.py  dislocation_tracker.py
bindings/python/opendxa/mesh/: __init__.py  atoms.py  background.py  dislocations.py  interface.py  stacking_faults.py
bindings/python/opendxa/stats/: dislocation_stats.py  dislocation_stats_aggregator.py
bindings/python/opendxa/utils/: analysis.py
bindings/python/opendxa/visualizers/: __init__.py  dislocation_visualizer.py  settings.py  stats.py
bindings/python/opendxa_py/lib/: __init__.py
bindings/python/opendxa_py/src/: main.cpp
bindings/python/visualizers/: vtk.py
opendxa/: CMakeLists.txt
opendxa/dependencies/: CMakeLists.txt
opendxa/dependencies/fast_float/: simple_decimal_conversion.h
opendxa/dependencies/geogram/: CMakeLists.txt  Delaunay_psm.cpp  Delaunay_psm.h  README
opendxa/dependencies/geogram/basic/: memory.h
opendxa/dependencies/geogram/mesh/: mesh_reorder.cpp
opendxa/dependencies/mwm_csp/: CMakeLists.txt  matching.cpp  matching.h  mwm_csp.cpp  mwm_csp.h
opendxa/dependencies/polyhedral-template-matching/: CMakeLists.txt  ptm_index.cpp
opendxa/dependencies/ptm/: CMakeLists.txt  README.md  ptm_alloy_types.cpp  ptm_canonical_coloured.cpp  ptm_constants.h  ptm_convex_hull_incremental.cpp  ptm_convex_hull_incremental.h  ptm_correspondences.cpp  ptm_correspondences.h  ptm_deformation_gradient.cpp  ptm_deformation_gradient.h  ptm_functions.h  ptm_fundamental_mappings.h  ptm_graph_data.cpp  ptm_graph_data.h  ptm_graph_tools.cpp  ptm_index.cpp  ptm_initialize_data.cpp  ptm_initialize_data.h  ptm_map_templates.cpp  ptm_multishell.cpp  ptm_multishell.h  ptm_neighbour_ordering.cpp  ptm_neighbour_ordering.h  ptm_normalize_vertices.cpp  ptm_normalize_vertices.h  ptm_quat.cpp  ptm_quat.h  ptm_solid_angles.cpp  ptm_solid_angles.h  ptm_structure_matcher.cpp  ptm_structure_matcher.h  ptm_templates.h
opendxa/include/: Includes.hpp  Settings.hpp
opendxa/include/core/: Clustering.hpp  DislocationTracing.hpp  InterfaceMesh.hpp  NeighborListBuilder.hpp  StackingFaults.hpp
opendxa/include/engine/: AnalysisEnvironment.hpp  Config.hpp  DislocationExtractionAlgorithm.hpp
opendxa/include/geometry/: Mesh.hpp
opendxa/include/logger/: Logger.hpp  LoggerManager.hpp
opendxa/include/opendxa/: Includes.hpp  includes.hpp  settings.hpp
opendxa/include/opendxa/analysis/: analysis_context.h  atomic_strain.h  burgers_circuit.h  burgers_loop_builder.h  centrosymmetry.h  cluster_analysis.h  cluster_connector.h  common_neighbor_analysis.h  compute_displacements.h  coordination_analysis.h  crystal_path_finder.h  cutoff_neighbor_finder.h  delaunay_tessellation_spatial_query.h  diamond_identifier.h  dislocation_tracer.h  elastic_mapping.h  elastic_strain.h  grain_segmentation.h  nearest_neighbor_finder.h  polyhedral_template_matching.h  ptm_neighbor_finder.h  smooth_dislocations_modifier.h  structure_analysis.h  triangle_tetrahedron_intersection_test.h
opendxa/include/opendxa/analyzers/: atomic_strain.h  centrosymmetry.h  cluster_analysis.h  compute_displacements.h  coordination.h  elastic_strain.h  grain_segmentation.h
opendxa/include/opendxa/cli/: common.h
opendxa/include/opendxa/core/: Clustering.hpp  DislocationTracing.hpp  InterfaceMesh.hpp  opendxa.h  (+13 more)
opendxa/include/parser/: ParserStream.hpp
opendxa/include/structures/: Atoms.hpp  Cluster.hpp  Dislocations.hpp  InterfaceMesh.hpp  Lattice.hpp  StackingFaults.hpp  Structures.hpp
opendxa/include/utils/: Burgers.hpp  CutoffEstimator.hpp  Debug.hpp  FloatType.hpp  MemoryPool.hpp  Timer.hpp
opendxa/src/: Main.cpp  main.cpp
opendxa/src/analysis/: analysis_context.cpp  atomic_strain.cpp  burgers_loop_builder.cpp  centrosymmetry.cpp  cluster_analysis.cpp  cluster_connector.cpp  common_neighbor_analysis.cpp  compute_displacements.cpp  coordination_analysis.cpp  crystal_path_finder.cpp  cutoff_neighbor_finder.cpp  delaunay_tessellation_spatial_query.cpp  diamond_identifier.cpp  dislocation_tracer.cpp  elastic_mapping.cpp  elastic_strain.cpp  nearest_neighbor_finder.cpp  polyhedral_template_matching.cpp  ptm_neighbor_finder.cpp  smooth_dislocations_modifier.cpp  structure_analysis.cpp
opendxa/src/analyzers/: atomic_strain.cpp  centrosymmetry.cpp  cluster_analysis.cpp  compute_displacements.cpp  coordination.cpp  elastic_strain.cpp  grain_segmentation.cpp
opendxa/src/core/: Clustering.cpp  CommonNeighborAnalysis.cpp  DislocationTracing.cpp  InterfaceMesh.cpp  StackingFaults.cpp  clustering.cpp  common_neighbor_analysis.cpp  coordination_structures.cpp  dislocation_analysis.cpp  dislocation_tracing.cpp  interface_mesh.cpp  lammps_parser.cpp  main.cpp  particle_property.cpp  polyhedral_template_matching.cpp  property_base.cpp  stacking_faults.cpp
opendxa/src/engine/: AnalysisEnvironment.cpp  AnalysisSummary.cpp  DislocationExtractionAlgorithm.cpp  SimulationCell.cpp  analysis_environment.cpp  analysis_summary.cpp  simulation_cell.cpp
opendxa/src/functions/: atomic_strain.cpp  centrosymmetry.cpp  cluster_analysis.cpp  coordination.cpp  displacements.cpp  dxa.cpp  elastic_strain.cpp  grains.cpp  opendxa.cpp  structure.cpp
opendxa/src/geometry/: Mesh.cpp  Smoothing.cpp  delaunay_tessellation.cpp  interface_mesh.cpp  mesh.cpp  smoothing.cpp  tri_mesh.cpp
opendxa/src/lattice/: BaceCenteredCubic.cpp  BodyCenteredCubic.cpp  FaceCenteredCubic.cpp  HexagonalClosePacked.cpp  body_centered_cubic.cpp  face_centered_cubic.cpp  hexagonal_closed_packed.cpp
opendxa/src/logger/: Logger.cpp  LoggerManager.cpp  logger.cpp  logger_manager.cpp
opendxa/src/math/: affine_decomposition.cpp
opendxa/src/parser/: LammpsParser.cpp  Parser.cpp  lammps_parser.cpp  parser.cpp
opendxa/src/structures/: cluster_graph.cpp  dislocation_network.cpp
opendxa/src/utilities/: json_exporter.cpp  msgpack_writer.cpp
(+3936 files in other folders)
